--- a/MiniShopApp/Pages/Settings/UserManages/UserCustomerLogIndex.razor
+++ b/MiniShopApp/Pages/Settings/UserManages/UserCustomerLogIndex.razor
@@ -83,6 +83,7 @@
             <MudButton Variant="Variant.Filled" 
             StartIcon="@Icons.Material.Filled.TaxiAlert" 
             Color="Color.Secondary"
+            ButtonType="ButtonType.Button"
             OnClick="CreateAlert">Summit Alert All Users</MudButton>
         </MudStack>
     </MudTabPanel>
