--- a/MiniShopApp/Pages/Settings/UserManages/UserCustomerLogIndex.razor
+++ b/MiniShopApp/Pages/Settings/UserManages/UserCustomerLogIndex.razor
@@ -1,5 +1,6 @@
 ﻿@page "/settings/user/customer-log"
 @using MiniShopApp.Models
+@using MiniShopApp.Models.Customers
 @layout MainLayout
 <PageTitle>Customer Logs</PageTitle>
 
