--- a/MiniShopApp/Components/Layout/MainLayout.razor
+++ b/MiniShopApp/Components/Layout/MainLayout.razor
@@ -48,8 +48,8 @@
                 <MudNavLink Href="/table" Icon="@Icons.Material.Filled.TableBar">Table</MudNavLink>
                 
                 <MudNavGroup Title="Customers" Icon="@Icons.Material.Filled.Groups2">
-                    <MudNavLink Href="/" Icon="@Icons.Material.Filled.Groups3" IconColor="Color.Success">Customer</MudNavLink>
-                    <MudNavLink Href="/" Icon="@Icons.Material.Filled.Security" IconColor="Color.Info">Security</MudNavLink>
+                <MudNavLink Href="/Customers/list" Icon="@Icons.Material.Filled.Groups3" IconColor="Color.Success">Customer</MudNavLink>
+                    <MudNavLink Href="/Customers/Type/list" Icon="@Icons.Material.Filled.Category" IconColor="Color.Info">Customer Type</MudNavLink>
                 </MudNavGroup>
                 <MudNavGroup Title="User management" Icon="@Icons.Material.Filled.Group">
                     <MudNavLink Href="/" Icon="@Icons.Material.Filled.ManageAccounts" IconColor="Color.Success">User</MudNavLink>
