--- a/MiniShopApp/Components/Layout/MainLayout.razor
+++ b/MiniShopApp/Components/Layout/MainLayout.razor
@@ -38,7 +38,8 @@
             <MudNavMenu Class="mud-width-full">
                 <MudNavLink Href="/" Icon="@Icons.Material.Filled.Dashboard">Dashboard</MudNavLink>
                 <MudNavGroup Title="Orders" Icon="@Icons.Material.Filled.Lan">
-                    <MudNavLink Href="/orders/views" Icon="@Icons.Material.Filled.Storefront" IconColor="Color.Success">Orders</MudNavLink>
+                    <MudNavLink Href="/orders/views/today" Icon="@Icons.Material.Filled.Storefront" IconColor="Color.Success">Order Today</MudNavLink>
+                    <MudNavLink Href="/orders/views" Icon="@Icons.Material.Filled.Storefront" IconColor="Color.Success">Order History</MudNavLink>
                     <MudNavLink Icon="@Icons.Material.Filled.ReceiptLong" IconColor="Color.Info">Order Details</MudNavLink>
                 </MudNavGroup>
                 <MudNavGroup Title="Products" Icon="@Icons.Material.Filled.ListAlt">
